add report dep, staff

--- a/MonthlyStatement/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Accounts/Index.cshtml
@@ -130,11 +130,11 @@
                                                     }
                                                     else if (item.AspNetRoles.First().Name.Equals("Bộ môn"))
                                                     {
-                                                        <div class="badge badge badge-success">Bộ môn</div>
+                                                        <div class="badge badge badge-info">Bộ môn</div>
                                                     }
                                                     else if (item.AspNetRoles.First().Name.Equals("Giảng viên"))
                                                     {
-                                                        <div class="badge badge badge-info">Giảng viên</div>
+                                                        <div class="badge badge badge-success">Giảng viên</div>
                                                     }
                                                     else if (item.AspNetRoles.First().Name.Equals("Nhân viên"))
                                                     {
