--- a/MonthlyStatement/Areas/Admin/Views/ListReportStaff/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportStaff/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MonthlyStatement.Models.DepartmentReport>
+﻿@model IEnumerable<MonthlyStatement.Models.StaffReport>
 
 @{
     int i = 0;
@@ -12,7 +12,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Quản lý danh sách báo cáo cá nhân</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Quản lý danh sách báo cáo nhân viên</h4>
 
                     </div>
                     <div class="card-body">
@@ -71,7 +71,7 @@
                                             </td>
                                             <td class="text-center">
                                                 <div class="buttons">
-                                                    <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("Detail","ListReportDepartment", new {id = item.department_report_id})">
+                                                    <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("Detail","ListReportStaff", new {id = item.staff_report_id})">
                                                         Xem
                                                     </a>
                                                 </div>
