--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormStaffEdit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormStaffEdit.cshtml
@@ -13,7 +13,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo nhân viên: @Model.ReportPeriod.report_period_name</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Chỉnh sửa báo cáo nhân viên: @Model.ReportPeriod.report_period_name</h4>
                     </div>
                 </div>
                 <div class="col-12">
