--- a/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/ListReportPeriod.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/ListReportPeriod.cshtml
@@ -44,7 +44,7 @@
                                                 @i
                                             </td>
                                             <td>
-                                                <a href="@Url.Action("Index", "FormStaffReport", new {id = item.report_period_id })">@item.report_period_name</a>
+                                                <a href="@Url.Action("Index", "FormDepartmentReport", new {id = item.report_period_id })">@item.report_period_name</a>
                                             </td>
                                             <td>
                                                 @item.start_date.Value.ToString("dd/MM/yyyy")
