--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
@@ -2,7 +2,6 @@
 @using MonthlyStatement.Models
 @{
     ViewBag.Title = "PersonalDetail";
-    Layout = "~/Views/Shared/_Layout.cshtml";
     int i = 0;
     int j = 64;
     int k = 0;
@@ -161,7 +160,7 @@
                                         </div>
                                         <hr />
                                         <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostCommentAsync", "CommentsPersonal", FormMethod.Post))
+                                        @using (Html.BeginForm("PostComment", "CommentsPersonal", FormMethod.Post))
                                         {
                                             <input type="hidden" name="id" value="@per" />
                                             <div class="form-group">
