--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentReportEdit.cshtml
@@ -1,4 +1,4 @@
-﻿@model  MonthlyStatement.Models.FormPersonalReport
+﻿@model  MonthlyStatement.Models.FormDepartmentReport
 @using MonthlyStatement.Models
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -11,20 +11,13 @@
     CP25Team04Entities models = new CP25Team04Entities();
     int idKy = ViewBag.PeriodsId;
 
-    var form = models.PersonalReports.Where(p => p.report_period_id == idKy);
+    var form = models.DepartmentReports.Where(p => p.report_period_id == idKy);
     string emails = User.Identity.Name;
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
-    var formPer = models.PersonalReports.Where(p => p.report_period_id == idKy && p.account_id.Equals(accID)).ToList();
+    var formPer = models.DepartmentReports.Where(p => p.report_period_id == idKy && p.account_id.Equals(accID)).ToList();
 }
 
-@if (ViewBag.Check == true)
-{
-        <div class="alert alert-danger" role="alert">
-            Bạn đã báo cáo tháng này!
-        </div>
-}
-else
-{
+
 <section class="section">
     <input hidden value="@Model.report_period_id" id="report_period_id" />
     <div class="section-body">
@@ -35,27 +28,14 @@ else
                         <h4 class="text-white" style="font-size:1.75rem">@Model.ReportPeriod.report_period_name</h4>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Thông báo</h4>
-                        <div class="card-header-action">
-                            <a data-collapse="#mycard-collapse" class="btn btn-icon btn-info" href="#"><i class="fas fa-plus"></i></a>
-                        </div>
-                    </div>
-                    <div class="collapse" id="mycard-collapse" style="">
-                        <div class="card-body">
-                            Thời gian báo cáo: @Model.ReportPeriod.start_date - @Model.ReportPeriod.end_date
-                        </div>
-                    </div>
-                </div>
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
                             <div id="accordion">
 
-                                @if (Model.FormPersonalReportDetails.Count() > 0)
+                                @if (Model.FormDepartmentReportDetails.Count() > 0)
                                 {
-                                    foreach (var items in Model.FormPersonalReportDetails)
+                                    foreach (var items in Model.FormDepartmentReportDetails)
                                     {
                                         if (items.Category.category_of_id == null)
                                         {
@@ -73,28 +53,34 @@ else
                                                     </div>
                                                 </div>
                                             </div>
-                                            foreach (var itemss in Model.FormPersonalReportDetails.Where(c => c.Category.category_of_id == items.category_id && c.Category.category_lv == 2).ToList())
+                                            foreach (var itemss in Model.FormDepartmentReportDetails.Where(c => c.Category.category_of_id == items.category_id && c.Category.category_lv == 2).ToList())
                                             {
                                                 lstId += itemss.category_id + "-";
                                                 i++;
                                                 <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
                                                     <div class="col-lg-12 ">
                                                         <input hidden id="dem-@itemss.category_id" value="1" />
-                                                        <input hidden id="frmPerDetail-@itemss.category_id" value="@itemss.form_personal_report_detail_id" />
-                                                        @if (Model.FormPersonalReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).Count() < 1)
+                                                        <input hidden id="frmPerDetail-@itemss.category_id" value="@itemss.form_department_report_detail_id" />
+                                                        @if (Model.FormDepartmentReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).Count() < 1)
                                                         {
+                                                            int inputIndex = 0;
+
                                                             <table class="table table-bordered dataTable">
+
                                                                 <tbody>
                                                                     <tr class="" style="max-width: 50px">
                                                                         <th colspan="2">@(i). @itemss.Category.category_content</th>
                                                                     </tr>
+                                                                    @foreach (var items_content in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == itemss.form_department_report_detail_id).ToList())
+                                                                    {
+                                                                        inputIndex++;
 
-                                                                    <tr id="formInput-@itemss.category_id">
-                                                                        <td colspan="2">
-                                                                            <input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@itemss.category_id-1">
-                                                                            <p hidden id="validation-noidung-@itemss.category_id-1" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                                                        </td>
-                                                                    </tr>
+                                                                        <tr id="formInput-@itemss.category_id">
+                                                                            <td colspan="2">
+                                                                                <input type="text" value="@items_content.department_report_content" class="form-control" id="noidung-@itemss.category_id-@inputIndex">
+                                                                            </td>
+                                                                        </tr>
+                                                                    }
                                                                     <tr hidden id="append-@itemss.category_id"></tr>
                                                                     <tr>
                                                                         <td>
@@ -104,9 +90,6 @@ else
                                                                             <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
                                                                         </td>
                                                                     </tr>
-
-
-
                                                                 </tbody>
                                                             </table>
                                                         }
@@ -118,7 +101,7 @@ else
                                                                     <tr class="" style="max-width: 50px">
                                                                         <th colspan="2">@(i). @itemss.Category.category_content</th>
                                                                     </tr>
-                                                                    @if (!Model.FormPersonalReportDetails.Any(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3))
+                                                                    @if (!Model.FormDepartmentReportDetails.Any(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3))
                                                                     {
                                                                         <tr id="formInput-@itemss.category_id">
                                                                             <td colspan="2">
@@ -138,28 +121,34 @@ else
                                                                         </tr>
                                                                         <tr hidden id="append-@itemss.category_id"></tr>
                                                                     }
+
                                                                 </tbody>
                                                             </table>
-                                                            foreach (var itemsss in Model.FormPersonalReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
+                                                            foreach (var itemsss in Model.FormDepartmentReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
                                                             {
                                                                 lstId += itemsss.category_id + "-";
                                                                 k++;
+                                                                int inputIndex = 0;
 
                                                                 <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
                                                                     <div class="col-lg-12 ">
                                                                         <input hidden id="dem-@itemsss.category_id" value="1" />
-                                                                        <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_personal_report_detail_id" />
+                                                                        <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_department_report_detail_id" />
                                                                         <table class="table table-bordered dataTable">
                                                                             <tbody>
                                                                                 <tr class="" style="max-width: 50px">
                                                                                     <th colspan="2">@(i).@(k) @itemsss.Category.category_content</th>
                                                                                 </tr>
-                                                                                <tr id="formInput-@itemsss.category_id">
-                                                                                    <td colspan="2">
-                                                                                        <input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@itemsss.category_id-1">
-                                                                                        <p hidden id="validation-noidung-@itemsss.category_id-1" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                                                                    </td>
-                                                                                </tr>
+                                                                                @foreach (var items_content_lv3 in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == itemsss.form_department_report_detail_id).ToList())
+                                                                                {
+                                                                                    inputIndex++;
+
+                                                                                    <tr id="formInput-@itemsss.category_id">
+                                                                                        <td colspan="2">
+                                                                                            <input type="text" value="@items_content_lv3.department_report_content" class="form-control" id="noidung-@itemsss.category_id-@inputIndex">
+                                                                                        </td>
+                                                                                    </tr>
+                                                                                }
                                                                                 <tr hidden id="append-@itemsss.category_id"></tr>
                                                                                 <tr>
                                                                                     <td>
@@ -222,7 +211,6 @@ else
         </div>
     </div>
 </section>
-}
 
 
 <script src="~/Scripts/jquery-3.4.1.js"></script>
@@ -283,7 +271,7 @@ else
             formData.append("reportperiodid", $('#report_period_id').val());
 
             $.ajax({
-                url: $('#requestUrl').val() + 'Personal/FormReport/submitFormReport',
+                url: $('#requestUrl').val() + 'Department/DepartmentReport/DepartmentReportEdit',
                 type: 'POST',
                 dataType: 'html',
                 contentType: false,
@@ -291,9 +279,7 @@ else
                 data: formData
             }).done(function (ketqua) {
                 if (ketqua == "Success") {
-                    swal('Thành công', 'Báo cáo tháng thành công', 'success').then(function () {
-                        location.reload();
-                    });
+                    swal('Thành công', 'Báo cáo tháng thành công', 'success');
                 } else {
                     swal('Thất bại', 'Báo cáo không thành công', 'error');
                 }
@@ -301,3 +287,6 @@ else
         }
     });
 </script>
+
+
+
