--- a/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffDetail.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffDetail.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     int i = 0;
     int j = 64;
+    int k = 0;
+    string lstId = "";
 
     CP25Team04Entities models = new CP25Team04Entities();
     int idperiod = Model.report_period_id;
@@ -13,7 +15,6 @@
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
     var formPer = models.StaffReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(accID));
     int per = formPer.First().staff_report_id;
-
 }
 
 <section class="section">
@@ -22,59 +23,120 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo nhân viên</h4>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-
-                            @foreach (var items in Model.FormStaffReportDetails)
+                            @foreach (var items in models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Where(x => x.Category.category_lv == 1).ToList())
                             {
-                                if (items.Category.category_of_id == null)
-                                {
-                                    i = 0;
-                                    j++;
-                                    <br />
-                                    <div class="section-title mt-1" style="font-weight:bold">
-                                        @(((char) j).ToString()). @items.Category.category_content.ToUpper()
 
-                                    </div>
-                                }
-                                else
+                                i = 0;
+                                j++;
+                                <br />
+                                <div class="section-title mt-1" style="font-weight:bold">
+                                    @(((char) j).ToString()). @items.Category.category_content.ToUpper()
+
+                                </div>
+
+                                foreach (var items_lv2 in models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Where(x => x.Category.category_of_id == items.category_id).ToList())
                                 {
+                                    lstId += items_lv2.category_id + "-";
                                     i++;
+
                                     <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
                                         <div class="col-lg-12">
+
                                             <table class="table table-bordered dataTable">
                                                 <tbody>
                                                     <tr class="" style="max-width: 50px">
-                                                        <th colspan="2">@(i). @items.Category.category_content</th>
+                                                        <th>@(i). @items_lv2.Category.category_content</th>
                                                     </tr>
-                                                    @if (models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items.form_staff_report_detail_id && p.staff_report_id == per).Count() > 0)
+
+                                                    @if (models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_lv2.form_staff_report_detail_id).Count() > 0)
                                                     {
+
                                                         int inputIndex = 0;
-                                                        foreach (var itemss in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items.form_staff_report_detail_id && p.staff_report_id == per).ToList())
+                                                        if (!models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                                         {
-                                                            inputIndex++;
-                                                            <tr id="formInput-@items.category_id-@inputIndex">
-                                                                <td colspan="2">
-                                                                    <input type="text" value="@itemss.Staff_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items.category_id-@inputIndex" readonly>
-                                                                    <p hidden id="validation-noidung-@items.category_id-@inputIndex" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                                                </td>
-                                                            </tr>
+                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_lv2.form_staff_report_detail_id).ToList())
+                                                            {
+                                                                inputIndex++;
+                                                                <tr id="formInput-@items_lv2.category_id-@inputIndex">
+                                                                    <td>
+                                                                        <input readonly type="text" value="@items_content.staff_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
+                                                                    </td>
+                                                                </tr>
+                                                            }
+                                                        }
+                                                        else
+                                                        {
+                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_lv2.form_staff_report_detail_id).ToList())
+                                                            {
+                                                                inputIndex++;
+                                                                <tr id="formInput-@items_lv2.category_id-@inputIndex" class="d-none">
+                                                                    <td>
+                                                                        <input readonly type="text" value="@items_content.staff_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
+                                                                    </td>
+                                                                </tr>
+                                                            }
                                                         }
                                                     }
+                                                    <tr hidden id="append-@items.category_id"></tr>
                                                 </tbody>
                                             </table>
+
                                         </div>
+
                                     </div>
+                                    if (models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
+                                    {
+                                        <div>
+                                            <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                                @foreach (var items_lv3 in models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
+                                                {
+                                                    <div class="col">
+                                                        <table class="table table-bordered dataTable">
+                                                            <tbody>
+                                                                <tr class="" style="max-width: 50px">
+                                                                    <th>@items_lv3.Category.category_content</th>
+                                                                </tr>
+                                                                @{ var items_groupby = models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && items_lv3.form_staff_report_detail_id == x.form_staff_report_detail_id).GroupBy(x => x.form_staff_report_detail_id).ToList();}
+
+                                                                @foreach (var item in items_groupby)
+                                                                {
+                                                                    foreach (var items_content_lv3 in models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && x.form_staff_report_detail_id == item.Key).ToList())
+                                                                    {
+                                                                        int inputIndex = 0;
+                                                                        inputIndex++;
+                                                                        if (models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_content_lv3.form_staff_report_detail_id).Count() > 0)
+                                                                        {
+                                                                            foreach (var items_content in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == items_content_lv3.form_staff_report_detail_id).ToList())
+                                                                            {
+                                                                                <tr>
+                                                                                    <td>
+                                                                                        <input readonly type="text" value="@items_content.staff_report_content" class="form-control" id="noidung-@items_content_lv3.category_id-@inputIndex">
+                                                                                    </td>
+                                                                                </tr>
+                                                                            }
+                                                                        }
+                                                                    }
+                                                                }
+                                                                <tr hidden id="append-@items.category_id"></tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                }
+                                            </div>
+                                        </div>
+                                    }
                                 }
                             }
+                            <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
                             <div class="section-title mt-3" style="font-weight:bold">
                                 <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
-
                             <hr />
                             <div class="col-12">
                                 <div class="card" style="background-color: #e9ecef">
@@ -99,7 +161,7 @@
                                         </div>
                                         <hr />
                                         <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostCommentAsync", "CommentsStaff", FormMethod.Post))
+                                        @using (Html.BeginForm("PostComment", "CommentsStaff", FormMethod.Post))
                                         {
                                             <input type="hidden" name="id" value="@per" />
                                             <div class="form-group">
@@ -112,7 +174,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -120,5 +181,3 @@
         </div>
     </div>
 </section>
-
-
